# rakkib-dev

./: .gitignore  AGENTS.md  CLAUDE.md  Clauidyplan.md  CodexReview.md  LICENSE  README.md  install.sh  manifest  pyproject.toml  web_guide.md  you-are-a-senior-bubbly-breeze.md
.beads/: config.yaml  export-state.json  interactions.jsonl  issues.jsonl  last-touched
.beads/backup/: backup_state.json  manifest
.github/workflows/: ci.yml  runtime-branch.yml
.omx/: metrics.json
.omx/logs/: turns-2026-05-06.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: pyqr.md
docs/public/: README.md
scripts/: runtime-branch.sh
services/: AGENTS.md  ApprovedServices.md  CLAUDE.md  PendingServices.md  rules.md  services_checklist.md
src/rakkib/: cli.py  docker.py  doctor.py  host_platform.py  interview.py  postgres_sql.py  render.py  schema.py  secret_utils.py  service_catalog.py  services_cli.py  state.py  util.py
tasks/: lessons.md
tests/: test_add_atomic.py  test_cli.py  test_docker.py  test_doctor.py  test_install_sh.py  test_interview.py  test_interview_platform_select.py  test_normalize.py  test_phase3b_output_snapshot.py  test_render.py  test_schema.py  test_secrets.py  test_service_catalog.py  test_service_resource_requirements.py  test_state.py  test_steps_cloudflare.py  test_steps_cron.py  test_steps_layout.py  test_steps_postgres.py  test_steps_services.py  test_steps_verify.py  test_web_answers.py  test_web_api.py  test_web_run.py
web/: install-worker.js  package-lock.json  package.json
web/public/: services.json
(+173 files in other folders)
